--- a/UI/TravelEasyUI/src/app/login/login.component.html
+++ b/UI/TravelEasyUI/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
-    <form (submit)="onLogin()">
+    <form (submit)="login()">
         <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required>
         <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
