--- a/UI/TravelEasyUI/src/app/register/register.component.html
+++ b/UI/TravelEasyUI/src/app/register/register.component.html
@@ -1,10 +1,1 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <label for="email">Email:</label>
-    <input type="email" id="email" formControlName="email">
-    <label for="username">Username:</label>
-    <input type="text" id="username" formControlName="username">
-    <label for="password">Password:</label>
-    <input type="password" id="password" formControlName="password">
-    <button type="submit" [disabled]="!registerForm.valid">Register</button>
-  </form>
-  
+<p>register works!</p>
