--- a/UI/TravelEasyUI/src/app/login/login.component.html
+++ b/UI/TravelEasyUI/src/app/login/login.component.html
@@ -1,7 +1,13 @@
-<div>
-    <form (submit)="login()">
-        <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required>
-        <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
+<div class="container">
+    <div class="login-form">
+        <h2>Login to your account</h2>
+        <form (submit)="login()">
+            <input type="email" [(ngModel)]="username" name="username" placeholder="Username" required>
+            <input type="email" [(ngModel)]="password" name="password" placeholder="Password" required>
+            <input type="submit" value="Login">
+        </form>
+        <footer>
+            <p>Privacy Policy · Contact Us · © UniversityoOfWindsor 2024</p>
+        </footer>
+    </div>
 </div>
