--- a/UI/TravelEasyUI/src/app/register/register.component.html
+++ b/UI/TravelEasyUI/src/app/register/register.component.html
@@ -1,1 +1,15 @@
-<p>register works!</p>
+<div class="container">
+    <div class="register-form">
+        <h2>Register Your Account</h2>
+        <form action="#" method="post">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+            <input type="submit" value="Register">
+        </form>
+        <footer>
+            <p>Privacy Policy · Contact Us · ©UniversityOfWindsor 2024</p>
+        </footer>
+    </div>
+</div>
