--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -4,9 +4,10 @@
     <nav class="navbar">
         <img src="assets/logo.PNG" alt="Site Logo" class="logo">
         <ul class="nav-links">
-           <li><a href="#">FLIGHT</a></li>
+           <li><a routerLink="/search-flight">FLIGHT</a></li>
            <li><a routerLink="/login">HOTEL</a></li>
            <li><a routerLink="/attraction">ATTRACTIONS</a></li>
+           
         </ul>
         <div>
             <button routerLink="/login" class="button">Sign In</button>
@@ -31,7 +32,7 @@
        <div class="footer-column">
           <h4>Booking Categories</h4>
           <ul>
-             <li><a href="#">Flight</a></li>
+             <li><a href="/UI/TravelEasyUI/src/app/flight/search-flight.component.html">Flight</a></li>
              <li><a href="#">Accommodation</a></li>
              <li><a href="#">Rental Cars</a></li>
              <!-- More links -->
