add stay changes

--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -5,7 +5,7 @@
         <img src="assets/logo.PNG" alt="Site Logo" class="logo">
         <ul class="nav-links">
            <li><a href="#">FLIGHT</a></li>
-           <li><a routerLink="/login">HOTEL</a></li>
+           <li><a routerLink="/hotel-list">HOTEL</a></li>
            <li><a routerLink="/attraction">ATTRACTIONS</a></li>
         </ul>
         <div>
