--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -23,9 +23,9 @@
        <div class="footer-column">
           <h4>About TravelEasy</h4>
           <ul>
-             <li><a href="#">Our Story</a></li>
+            <li><a routerLink="/our-story">Our Story</a></li>
              <li><a href="#">The Team</a></li>
-             <li><a href="#">Our Mission</a></li>
+             <li><a routerLink="/our-mission">Our Mission</a></li>
              <!-- More links -->
           </ul>
        </div>
@@ -50,11 +50,11 @@
        <div class="footer-column">
           <h4>Stay Connected</h4>
           <div class="social-media-links">
-             <a href="#"><img src="assets/Facebook.png" alt="Facebook"></a>
-              <a href="#"><img src="assets/instagram.jpg" alt="instagram"></a>
-             <a href="#"><img src="assets/pinterest.png" alt="pinterest"></a>
-             <a href="#"><img src="assets/twitter.png" alt="twitter"></a>
-             <a href="#"><img src="assets/youtube.png" alt="youtube"></a>
+            <a href="https://www.facebook.com/"><img src="assets/Facebook.png" alt="Facebook"></a>
+              <a href="https://www.instagram.com/"><img src="assets/instagram.jpg" alt="instagram"></a>
+             <a href="https://www.pinterest.ca/"><img src="assets/pinterest.png" alt="pinterest"></a>
+             <a href="https://x.com/?lang=en"><img src="assets/twitter.png" alt="twitter"></a>
+             <a href="https://www.youtube.com/"><img src="assets/youtube.png" alt="youtube"></a>
 
           </div>
           <div class="newsletter">
