Updateing the-team page

--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -23,8 +23,8 @@
        <div class="footer-column">
           <h4>About TravelEasy</h4>
           <ul>
-            <li><a routerLink="/our-story">Our Story</a></li>
-             <li><a href="#">The Team</a></li>
+             <li><a routerLink="/our-story">Our Story</a></li>
+             <li><a routerLink="/the-team">The Team</a></li>
              <li><a routerLink="/our-mission">Our Mission</a></li>
              <!-- More links -->
           </ul>
