--- a/UI/TravelEasyUI/src/app/payment/payment.component.html
+++ b/UI/TravelEasyUI/src/app/payment/payment.component.html
@@ -1,12 +1,20 @@
 <div class="payment-details-container">
   <div class="payment-details">
     <h2>Payment Details</h2>
-    <div *ngIf="flight">
-      <p>Airline: {{ flight.airline }}</p>
-      <p>From: {{ flight.origin }}</p>
-      <p>To: {{ flight.destination }}</p>
-      <p>Departure: {{ flight.departureTime }}</p>
-      <p>Price: {{ flight.price }}</p>
+    <div *ngIf="item">
+      <div *ngIf="item.type === 'flight'">
+        <p>Airline: {{ item.airline }}</p>
+        <p>From: {{ item.origin }}</p>
+        <p>To: {{ item.destination }}</p>
+        <p>Departure: {{ item.departureTime }}</p>
+      </div>
+      <div *ngIf="item.type === 'hotel'">
+        <p>Hotel Name: {{ item.name }}</p>
+        <p>Location: {{ item.location }}</p>
+       <!--<p>Check-in: {{ item.checkInDate }}</p>
+        <p>Check-out: {{ item.checkOutDate }}</p>--> 
+      </div>
+      <p>Price: {{ item.price }}</p>
       <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
       <button (click)="confirmPayment()" class="button">Confirm Payment</button>
     </div>
