--- a/UI/TravelEasyUI/src/app/dashboard/dashboard.component.css
+++ b/UI/TravelEasyUI/src/app/dashboard/dashboard.component.css
@@ -47,7 +47,7 @@ body, html {
     background-color: #367c39;
 }
 .banner {
-    background-image: url('/assets/banner.jpg'); /* Ensure the path is correct */
+    background-image: url('/assets/banner1.jpeg'); /* Ensure the path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
