--- a/UI/TravelEasyUI/src/app/hotel-list/hotel-list.component.html
+++ b/UI/TravelEasyUI/src/app/hotel-list/hotel-list.component.html
@@ -1,4 +1,3 @@
-<!-- hotel-list.component.html -->
 <div class="banner">
   <div class="overlay">
     <div class="text-content">
@@ -16,18 +15,16 @@
 
 <div class="hotel-results" *ngIf="hotels.length > 0">
   <h2>Hotel Results</h2>
-  <ul>
+  <ul class="hotel-list">
     <li *ngFor="let hotel of hotels" class="hotel-item">
-      <div class="hotel-details">
+      <img [src]="hotel.imageUrl" alt="{{ hotel.name }}" class="hotel-img">
+      <div class="hotel-content">
         <h3>{{ hotel.name }}</h3>
         <p>{{ hotel.description }}</p>
         <p>Location: {{ hotel.location }}</p>
-        
-        <p>Budget: {{ hotel.budget }}</p> <!-- Assuming budget is a number, you can format it as currency -->
+        <p>Budget: {{ hotel.budget | currency }}</p> <!-- Format budget as currency -->
+        <button (click)="goToPayment(hotel)" class="button">Book Now</button>
       </div>
-      <button (click)="selectHotel(hotel)" class="button">View Details</button>
-      <button (click)="addToCart(hotel)" class="button">Add to Cart</button>
-      <button (click)="goToPayment(hotel)" class="button">Book Now</button>
     </li>
   </ul>
 </div>
