--- a/UI/TravelEasyUI/src/app/dashboard/dashboard.component.css
+++ b/UI/TravelEasyUI/src/app/dashboard/dashboard.component.css
@@ -47,7 +47,7 @@ body, html {
     background-color: #367c39;
 }
 .banner {
-    background-image: url('/assets/banner1.jpeg'); /* Ensure the path is correct */
+    background-image: url('../../assets/dashboard.png'); /* Ensure the path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -266,7 +266,7 @@ body, html {
 }
 
 .hero {
-    background-image: url('https://images2.goabroad.com/image/upload/images2/program_content/oB4IN8qKYzUoqGnbA7MX7rGcWW57YesxAsFg1t8z.jpg'); /* Ensure the path is correct */
+    background-image: url('../../assets/dashboard.png'); /* Ensure the path is correct */
     background-size: cover;
     background-position: center;
     height: 100vh;
