orders component created to render user orders

--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -19,6 +19,7 @@
        </div>
        <div *ngIf="isLoggedIn()">
          <button (click)="logout()" class="button">Logout</button>
+         <button (click)="navigateToOrders()" class="button">Orders</button>
        </div>
        
     </nav>
