integrating all changes

--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -47,29 +47,26 @@
             <!-- More links -->
          </ul>
       </div>
-      <div class="footer-column">
+      <!--<div class="footer-column">
          <h4>Customer Service</h4>
          <ul>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Gift Certificates</a></li>
             <li><a href="#">Shipping Information</a></li>
-            <!-- More links -->
+           
          </ul>
-      </div>
+      </div>-->
       <div class="footer-column">
          <h4>Stay Connected</h4>
          <div class="social-media-links">
-            <a href="#"><img src="assets/Facebook.png" alt="Facebook"></a>
-             <a href="#"><img src="assets/instagram.jpg" alt="instagram"></a>
-            <a href="#"><img src="assets/pinterest.png" alt="pinterest"></a>
-            <a href="#"><img src="assets/twitter.png" alt="twitter"></a>
-            <a href="#"><img src="assets/youtube.png" alt="youtube"></a>
+            <a href="https://www.facebook.com/"><img src="assets/Facebook.png" alt="Facebook"></a>
+             <a href="https://www.instagram.com/"><img src="assets/instagram.jpg" alt="instagram"></a>
+            <a href="https://www.pinterest.ca/"><img src="assets/pinterest.png" alt="pinterest"></a>
+            <a href="https://twitter.com/?lang=en"><img src="assets/twitter.png" alt="twitter"></a>
+            <a href="https://www.youtube.com/"><img src="assets/youtube.png" alt="youtube"></a>
 
          </div>
-         <div class="newsletter">
-            <input type="email" placeholder="Email">
-            <button>Submit</button>
-         </div>
+        
       </div>
    </div>
    <div class="footer-lastrow">
