--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -41,9 +41,10 @@
       <div class="footer-column">
          <h4>Booking Categories</h4>
          <ul>
-            <li><a href="/UI/TravelEasyUI/src/app/flight/search-flight.component.html">Flight</a></li>
-            <li><a href="#">Accommodation</a></li>
-            <li><a href="#">Rental Cars</a></li>
+            <li><a href="/search-flight">Flight booking</a></li>
+            <li><a routerLink="/hotel-list">Hotel booking</a></li>
+            <li><a routerLink="/attraction">Attractions</a></li>
+            <li><a routerLink="/car-rental">Car Rental Booking</a></li>
             <!-- More links -->
          </ul>
       </div>
@@ -66,7 +67,8 @@
             <a href="https://www.youtube.com/"><img src="assets/youtube.png" alt="youtube"></a>
 
          </div>
-        
+
+         <h5>Follow us for exciting deals and offers</h5>
       </div>
    </div>
    <div class="footer-lastrow">
