--- a/UI/TravelEasyUI/src/app/app.component.html
+++ b/UI/TravelEasyUI/src/app/app.component.html
@@ -74,7 +74,7 @@
    <div class="footer-lastrow">
       <div class="certifications">
 
-         <img src="assets/privacy-guaranteed.jpg" alt="Privacy Guaranteed">
+         <img src="assets/unilogo.jpg" alt="University of Windsor" style="height: 100px ; width: 200px">
 
          <!-- More logos as needed -->
       </div>
